# opengl_examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: texture.frag  triangle.frag
shaders/basic_lighting/: cube.frag  cube.vert  light.frag
shaders/color_lighting/: light.frag
shaders/intro/: mvp.vert  texture.frag  texturePos.vert  triangle.frag  triangle.vert
shaders/multiple_lights/: cube.frag  light.frag
shaders/transparency/: transparency.frag
src/: main.cpp
src/application/: CMakeLists.txt  camera.h  input.cpp  input.h  keys.h  mouse_button.h  scenes.cpp  scenes.hpp  window.cpp  window.h
src/core/: CMakeLists.txt  file_system.cpp  file_system.h  memory.cpp  memory.h  platform.h  service.h
src/graphics/: CMakeLists.txt  material.h  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pipelines.cpp  pipelines.hpp  shader.cpp  shader.h  texture_utils.cpp  texture_utils.hpp
